feat: Responsive Stage

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^21.2.1",
     "raf": "^3.4.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-auto-scale": "^1.0.4",
     "react-styleguidist": "^6.0.33",
     "react-test-renderer": "^16.1.0",
     "webpack": "^3.8.1",
